--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
-<% password_digest = BCrypt::Password.create("password") %>
+# <% password_digest = BCrypt::Password.create("password") %>
 
-one:
-  email_address: one@example.com
-  password_digest: <%= password_digest %>
+# one:
+#   email_address: one@example.com
+#   password_digest: <%= password_digest %>
 
-two:
-  email_address: two@example.com
-  password_digest: <%= password_digest %>
+# two:
+#   email_address: two@example.com
+#   password_digest: <%= password_digest %>
