--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -10,7 +10,7 @@ servers:
     - 162.43.21.190
 
 ssh:
-  user: kakehashi
+  user: debian
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
